k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasher
  labels:
    app: flasher
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9999
    protocol: TCP
    name: http
  selector:
    app: flasher
